# vectorium

./: .gitignore  README.md  dev.cpp  meson.build
docs/: DOCS.MD
include/: vector3D.hpp
src/: noise.cpp  vector3D.cpp
